[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "cuda-histogram"
maintainers = [
  { name = "The Scikit-HEP admins", email = "scikit-hep-admins@googlegroups.com" },
]
authors = [
  { name = "Lindsey Gray", email = "lagray@fnal.gov" },
  { name = "Saransh Chopra", email = "saransh0701@gmail.com" },
]
description = "Histogramming tools on CUDA."
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "cupy-cuda12x>=13.1.0",
  "awkward>=2.6.3",
  "numpy>=1.22.0",
  "scipy>=1.1.0",
  "hist>=2",
  "boost-histogram",
]
[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest>=6",
  "pytest-cov>=3",
  "pytest-mpl",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]

[project.urls]
Homepage = "https://github.com/scikit-hep/cuda-histogram"
"Bug Tracker" = "https://github.com/scikit-hep/cuda-histogram/issues"
Discussions = "https://github.com/scikit-hep/cuda-histogram/discussions"
Changelog = "https://github.com/scikit-hep/cuda-histogram/releases"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/cuda_histogram/_version.py"

[tool.hatch.envs.default]
features = ["test"]
scripts.test = "pytest {args}"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::FutureWarning",
  "ignore::RuntimeWarning",
  "ignore::DeprecationWarning",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["cuda_histogram"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.8"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "cuda_histogram.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]
[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "EM101",    # Exception must not use an f-string literal
  "EM102",    # Exception must not use an f-string literal
  "EM102",    # Exception must not use an f-string literal
  "EM102",    # Exception must not use an f-string literal
  "EM103",    # Exception must not use a `.format()` string directly
  "RET505",   # Unnecessary `elif` after `return` statement
  "RET506",   # Unnecessary `elif` after `return` statement
  "B028",     # No explicit `stacklevel` keyword argument found
  "PT011",    # `pytest.raises(ValueError)` is too broad
  "PTH118",   # `os.path.join()`
  "PTH123",   # `open()`
  "PTH109",   # `os.getcwd()`
  "NPY002",   # Legacy numpy functions
]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["cuda_histogram._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.8"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
